lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_bs_escaped_json/buffer_append_bs_escaped_json3/buffer_append_bs_escaped_json3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_bs_escaped_json/buffer_append_bs_escaped_json3/buffer_append_bs_escaped_json3.c:31:35: error: use of undeclared identifier 's__b'
    buffer_append_bs_escaped_json(s__b ,p_q_b__s ,q_b__len );
                                  ^
1 error generated.
